# prose-style-lint

./: README.md  check_style.py  deferred-long-sentences.md  polish.md  pyproject.toml
stylint/: cli.py  lint.py  patterns.py  tags.py  text.py
stylint/rules/: banned.py  prose.py
tests/: test_check_style.py  test_stylint_package.py
