[project]
name = "prose-style-lint"
dynamic = ["version"]
description = "A markdown style linter for technical writing - flags bold/italic, em dashes, banned phrases, long sentences, label-colon openers, and more."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alexey Grigorev" }]
license = { text = "MIT" }
keywords = ["markdown", "lint", "style", "prose", "writing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/alexeygrigorev/prose-style-lint"
Repository = "https://github.com/alexeygrigorev/prose-style-lint"

[project.scripts]
prose-style-lint = "check_style:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["check_style", "version"]

[tool.setuptools.dynamic]
version = { attr = "version.__version__" }
